
  [ Gabriel Zachmann ]
  * Fixed a bug due to which no error message was displayed when trying to
    load an account configuration and the oidc-agent directory was not
    accessible for oidc-add.
  * This bug also caused the agent to crash if oidc-token was used to load
    this account configuration on the fly and the oidc-agent directory was 
    not accessible for oidc-agent.

  [ Gabriel Zachmann ]
  * Add possibility to allow applications that run under another user access
    to the agent by using the --with-group option

  [ Marcus Hardt ]
  * Add debhelper-token
  * Remove build-essential from Build-Depends
  * Improve clean target to fix "source-is-missing" lintian warnings

  [ Gabriel Zachmann ]
  * Add possibility to avoid custom uri scheme (useful when running on a
    remote server)
  * Fixed bug with doubled communication when not all required scopes could be
    registered
  * Now displaying warning message when client regstration could not register
    all requested scopes.

  [ Gabriel Zachmann ]
  * Add public clients for deep and extreme datacloud

  [ Gabriel Zachmann ]
  * Add public clients for iam-demo.cloud.cnaf.infn.it

  [ Gabriel Zachmann ]
  * Fixed bug that might cause problems with providers that do not support
    PKCE. No longer sending code_verifier on auth code exchange requests.

  [ Gabriel Zachmann ]
  * Fixed some spelling errors.
  * Fix X11 settings only adjusted when the configuration file already exists.
  * Increased oidc-gen polling interval and duration.
  * oidc-gen now displays the scopes supported by the provider.
  * Scopes provided to oidc-gen are no longer intersected with the supported
    scopes.

  [ Gabriel Zachmann ]
  * Improve RPM build

  [ Gabriel Zachmann ]
  * Fix scope lookup not using cert path.
  * Exit oidc-gen when error during scope lookup.
  * Add option to oidc-token to specify name of calling application.

 -- Marcus Hardt <hardt@kit.edu>  Fri, 10 Jan 2020 10:37:21 +0200