@@ -14,7 +14,8 @@ struct arguments {
   unsigned char removeAll;
   unsigned char debug;
   unsigned char verbose;
-  unsigned char list;
+  unsigned char listConfigured;
+  unsigned char listLoaded;
   unsigned char print;
   unsigned char lock;
   unsigned char unlock;
@@ -36,7 +37,9 @@ static struct argp_option options[] = {
     {"remove", 'r', 0, 0, "The account configuration is removed, not added", 1},
     {"remove-all", 'R', 0, 0,
      "Removes all account configurations currently loaded", 1},
-    {"list", 'l', 0, 0, "Lists the available account configurations", 1},
+    {"list", 'l', 0, 0, "Lists all configured account configurations", 1},
+    {"loaded", 'a', 0, 0, "Lists the currently loaded account configurations",
+     1},
     {"print", 'p', 0, 0, "Prints the encrypted account configuration and exits",
      1},
     {"lifetime", 't', "TIME", 0,
@@ -83,7 +86,8 @@ static error_t parse_opt(int key, char* arg, struct argp_state* state) {
     case 'g': arguments->debug = 1; break;
     case 'v': arguments->verbose = 1; break;
     case 'p': arguments->print = 1; break;
-    case 'l': arguments->list = 1; break;
+    case 'l': arguments->listConfigured = 1; break;
+    case 'a': arguments->listLoaded = 1; break;
     case 'x': arguments->lock = 1; break;
     case 'X': arguments->unlock = 1; break;
     case 'c': arguments->confirm = 1; break;
@@ -118,8 +122,8 @@ static error_t parse_opt(int key, char* arg, struct argp_state* state) {
       arguments->args[state->arg_num] = arg;
       break;
     case ARGP_KEY_END:
-      if (arguments->list || arguments->lock || arguments->unlock ||
-          arguments->removeAll) {
+      if (arguments->listConfigured || arguments->listLoaded ||
+          arguments->lock || arguments->unlock || arguments->removeAll) {
         break;
       }
       if (state->arg_num < 1) {
@@ -143,7 +147,8 @@ static inline void initArguments(struct arguments* arguments) {
   arguments->removeAll               = 0;
   arguments->debug                   = 0;
   arguments->verbose                 = 0;
-  arguments->list                    = 0;
+  arguments->listConfigured          = 0;
+  arguments->listLoaded              = 0;
   arguments->print                   = 0;
   arguments->lifetime.argProvided    = 0;
   arguments->lifetime.lifetime       = 0;
