@@ -2,5 +2,6 @@
 #define PARSE_IPC_ADD_H
 
 void add_parseResponse(char* res);
+void add_parseLoadedAccountsResponse(char* res);
 
 #endif  // PARSE_IPC_ADD_H
