@@ -8,7 +8,7 @@
 #include "utils/oidc_error.h"
 #include "utils/printer.h"
 
-void common_handleListAccountConfigs() {
+void common_handleListConfiguredAccountConfigs() {
   list_t* list = getAccountConfigFileList();
   list_mergeSort(list, (int (*)(const void*, const void*))compareFilesByName);
   char* str = listToDelimitedString(list, '\n');
