@@ -1,7 +1,7 @@
 #ifndef COMMON_FEATURES_H
 #define COMMON_FEATURES_H
 
-void common_handleListAccountConfigs();
+void common_handleListConfiguredAccountConfigs();
 void common_assertAgent();
 
 #endif  // COMMON_FEATURES_H
