@@ -320,5 +320,6 @@ oidc-agent (3.2.8) UNRELEASED; urgency=medium
   * Fix scope lookup not using cert path.
   * Exit oidc-gen when error during scope lookup.
   * Add option to oidc-token to specify name of calling application.
+  * Add option to oidc-add to list currently loaded accounts. 
 
- -- Marcus Hardt <hardt@kit.edu>  Fri, 10 Jan 2020 10:37:21 +0200
+ -- Marcus Hardt <hardt@kit.edu>  Fri, 10 Jan 2020 12:33:08 +0200
